<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaCadastrado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    tools:context=".GUI_04_petCadastrado">

    <TextView
        android:id="@+id/telaDoPet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/titleTeladoPet"
        android:textSize="30dp" />

    <TableRow
        android:id="@+id/Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvtitlenome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/titlenome"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvnome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="17dp" />

    </TableRow>

    <TableRow
        android:id="@+id/chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvtitlechip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/titlechip"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvchip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="17dp" />
    </TableRow>

    <TableRow
        android:id="@+id/especie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvtitleespecie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/titleespecie"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvespecie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="17dp" />
    </TableRow>

    <TableRow
        android:id="@+id/anonasc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvtitleanonasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/titleanonasc"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvanonasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="17dp" />

    </TableRow>

    <TableRow
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvtitlepeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/titlepeso"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvpeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="17dp" />


    </TableRow>

    <TableRow
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvtitlealtura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/titlealtura"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvaltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="17dp" />
    </TableRow>

    <TableRow
        android:id="@+id/porte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvtitleporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/titleporte"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="17dp" />

    </TableRow>

    <TableRow
        android:id="@+id/pelagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvtitlepelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/titlepelo"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvpelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="17dp" />

    </TableRow>
</LinearLayout>